# basic-ir

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _clang-format
book/: README.md  SUMMARY.md  appendix-a.md  basic-gcd-ast.dot  basic_function.md  chapter-00.md  chapter-01.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md  chapter-80.md  chapter-90.md  generating-llvm-ir.md  grammar.md  introduction.md  parsing.md  plans.md  synthesis.md
cases/: .gitignore  case00.bas  case01.bas  case01.c  case02.bas  case03.bas  case04.bas  case04.c  case05.bas  case06.bas  case07.bas  case08.bas  case09.bas  case10.bas  case11.bas  case12.bas  case13.bas  case14.bas  case15.bas  case16.bas  case17.bas  case18.bas
code/: Makefile  ast.cxx  ast.hxx  astm.lisp  basic.cxx  codeir.cxx  compiler.cxx  compiler.hxx  irtoc.awk  lispast.cxx  parser.cxx  parser.hxx  scanner.cxx  scanner.hxx  support.c  symtab.cxx  symtab.hxx  test0.cxx  test1.cxx  tokens.cxx  tokens.hxx
doc/: README.md  basic_text.md  grammar.md
examples/: ex00.bas  ex01.bas  ex02.bas  ex02.c  ex03.bas  ex04.bas  ex05.bas  ex06.bas  ex07.bas  ex07.c  ex08.c  ex09.bas  ex09.c  ex10.c  ex11.bas  ex12.bas  ex13.bas  ex14.bas  ex14.c  runall.sh
src/: CMakeLists.txt  LLVMEmitter.cxx  LLVMEmitter.hxx  asdot-test.lisp  asdot.cxx  asdot.hxx  asdot.lisp  aslisp.cxx  aslisp.hxx  asllvm.cxx  asllvm.hxx  ast.cxx  ast.hxx  astvisitor.cxx  astvisitor.hxx  basic_ir_lib.c  basic_ir_text.c  checker.cxx  checker.hxx  compiler.cxx  compiler.hxx  converter.cxx  converter.hxx  errors.hxx  formatters.hxx  iremitter.cxx  iremitter.hxx  lexeme.cxx  lexeme.hxx  main.cxx  parser.cxx  parser.hxx  scanner.cxx  scanner.hxx  typechecker.cxx  typechecker.hxx  usings.hxx
tests/: Makefile  case0.bas  case0.exp  case1.bas  ex0.c  ex1.c  ex2.c  ex3.c  ex4.c  test2.cxx  test3.cxx  test4.cxx  test5.cxx  test6.cxx  test7.cxx  test8.cxx  test9.cxx  testParser.cxx  testScanner.cxx  testSymTab.cxx
